--- a/src/Components/RoomDashboard/RoomDashboard.css
+++ b/src/Components/RoomDashboard/RoomDashboard.css
@@ -69,15 +69,12 @@
     -webkit-box-shadow: 4px 5px 5px 0px rgba(0,0,0,0.17);
     -moz-box-shadow: 4px 5px 5px 0px rgba(0,0,0,0.17);
     box-shadow: 4px 5px 5px 0px rgba(0,0,0,0.17);
-    margin-bottom: 20px;
-    margin-right: 20px;
 }
 
 .room-card-container{
     display: flex;
     flex-direction: row;
-    padding-top: 10px;
-    padding-bottom: 10px;
+    width: 90%;
 }
 
 .info-container{
